# cos

./: LICENSE  README.md  __init__.py  cnstall.py  setup.py
cos/: __init__.py  cshell.py  setup.cfg
cos-sys/: __init__.py  cshell.py
