[metadata]
# replace with your username:
name = dgc
version = 0.0.1
author = dgc
author_email = author@example.com
description = cOs Package for system operations.
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = cos
packages = find:
python_requires = >=3.6

[options.packages.find]
where = cos